# RanD

./: .gitignore  README.md  install-r-and-d-agent.bat  run-research-once.bat  run-research-schedule.bat
docs/: architecture.md  evaluation.md  next-implementation-priorities.md  requirements.md  review_260315.md  specification.md
kestra/: README.md
r-and-d-agent-installer/: .env.example  .gitignore  README.md
research-runtime/: .gitignore  README.md  pyproject.toml  sitecustomize.py
research-runtime/configs/: heartbeat.json  runtime.json  schedule.json
research-runtime/configs/presets/: ai_news_official.json  ai_watch_daily.json  paper_arxiv_ai_recent.json
research-runtime/docs/: operations.md  verification.md
research-runtime/examples/: request.paper_arxiv_ai_recent.json
research-runtime/prompts/: ai_watch_daily_prompt.md  gate_bridge.md  insight_bridge.md  official_ai_news_prompt.md  paper_research_prompt.md
research-runtime/rand_research/: __init__.py
research-runtime/scripts/: env-check.ps1  run-once.bat  run-once.ps1  run-schedule.bat  run-schedule.ps1
research-runtime/src/rand_research/: __init__.py  cli.py  config.py  fetchers.py  integrations.py  models.py  notifier.py  paths.py  pipeline.py  reports.py  state_store.py
research-runtime/tests/: test_cli.py  test_fetchers.py  test_integrations.py  test_kestra_flows.py  test_pipeline.py  test_reports.py  test_resolve_components.py  test_state_store.py
research-runtime/tests/fixtures/: anthropic_news_rss.xml  arxiv_recent.html  deepmind_blog_rss.xml  generic_links.html  openai_news_rss.xml
(+11 files in other folders)
